--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div>  
-        <h2 style="color:green"> Happy 6 month anniversary </h2>  
-        <h4> Press the button to shuffle the cards and ask me a question </h4>  
+        <h2> Happy 6 month anniversary &#9829;</h2>  
+        <h4> Let's create an even stronger connection. Press the button to shuffle the cards and ask me a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button>  
         </div>
         </body>
