--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div>  
         <h2> Happy 6 month anniversary &#9829;</h2>  
-        <h4> Let's create an even stronger connection. Press the button to shuffle the cards and ask me a question </h4>  
+        <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask me a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button>  
         </div>
         </body>
