--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <h2> Happy 6 month anniversary &#9829;</h2>  
         <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask me a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button>  
+        <h4> Catalina & Nathan 23/10/2021 </h4> 
+        <span> &#9829; </span>
         </div>
         </body>
       </html>
