--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     </head>
     <body>
         <div>  
-        <h2> Happy 6 month anniversary &#9829;</h2>  
+        <h2> Happy 6 month anniversary </h2>  
+        <span> &#9829; </span>
         <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask each other a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button> 
         </div>
-        <h4> Catalina & Nathan 23/10/2021 </h4> 
-        <span> &#9829; </span>
         </body>
       </html>
