--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div>  
         <h2> Happy 6 month anniversary </h2>  
-        <span> &#9829; </span>
+        <div> &#9829; </div>
         <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask each other a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button> 
         </div>
