--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div>  
-        <h2> Happy 6 month anniversary </h2>  <span> &#9829; </span>
+            <h2> Happy 6 month anniversary <span> &#9829; </span> </h2>
         <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask each other a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button> 
         </div>
