--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
         <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask each other a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button> 
         </div>
+        <img src="8.jpg" width="600" height="680">
         </body>
       </html>
