--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         <h4> This is a little card game I created for us. Press the button to shuffle the cards and ask each other a question </h4>  
         <button onclick="displayRandomImages();"> Shuffle </button> 
         </div>
-        <img src="8.png" width="680" height="680">
+        <img src="collage.jpg" width="780" height="780">
         </body>
       </html>
