--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Happy 6 month anniversary</title>  
+        <title> Catalina & Nathan </title>  
         <link rel="stylesheet" href="styles.css">
         <script src="script.js"></script>
     </head>
